--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ipykernel>=6.30.1",
     "keras>=3.11.3",
     "matplotlib>=3.10.6",
+    "notebook>=7.4.5",
     "numpy>=2.3.3",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
