--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "matplotlib>=3.10.6",
     "notebook>=7.4.5",
     "numpy>=2.3.3",
+    "pandas>=2.3.2",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
     "tensorflow>=2.20.0",
